2007-03-20  Junichi Uekawa  <dancer@debian.org>

	* pbuilder-buildpackage: build-dep resolution cannot determine the
	architecture being built on when building under fakeroot, reported
	and patch submitted by Paul TBBle Hampson.
	
2007-01-31  Junichi Uekawa  <dancer@debian.org>

	* pbuilder-satisfydepends: run dpkg-architecture inside chroot.

2007-01-30  Junichi Uekawa  <dancer@debian.org>

	* pbuilder-user-mode-linux: Mattia Dongili: "As rootstrap allows
	this configuration it would be nice if pbuilder-uml was aware of
	it too and mount /lib/modules early enough to avoid errors and
	warnings."

2007-01-22  Junichi Uekawa  <dancer@debian.org>

	* pbuilderrc: default is now --variant=buildd for debootstrap option

2007-01-20  Junichi Uekawa  <dancer@debian.org>

	* pbuilder.8: add EXAMPLES section

	* pdebuild.1: add EXAMPLES section

	* debuild-pbuilder.1: add EXAMPLES section.

2007-01-13  Junichi Uekawa  <dancer@debian.org>

	* git-tag.sh: 
	* debuild.sh: tools for git repository package building.

	* Documentation/pbuilder-doc.xml: Add references to git repository.

2007-01-04  Junichi Uekawa  <dancer@debian.org>

	* pbuilder-modules: Fix the situation where "cowbuilder --update
	--override-config --mirror $mirror" fails to clean up.

2006-12-17  Junichi Uekawa  <dancer@debian.org>

	* pbuilder-createbuildenv: use FORCE_CONFNEW in 'pbuilder create'
	also, since dist-upgrade here may cause configuration file change
	if enough change exists. e.g.  when OTHERMIRROR is set to
	backports.org

	* pbuilder: remove '/run' after 'execute'

2006-12-09  Loic Minier <lool@dooz.org>

	* pbuilder-satisfydepends-experimental: small optimization: move
	COMPARESTRING and DEPSVERSION computation out of the per-version loop;
	quote COMPARESTRING properly.
	* pbuilder-satisfydepends-experimental: small optimization: return the
	exact requested version when a strictly versionned dependency is used.

2006-11-14  Loic Minier <lool@dooz.org>
