@@ -31,7 +31,7 @@ Description: personal package builder for Debian packages
  pbuilder just like "debuild", as a normal user.
 
 Package: pbuilder-uml
-Architecture: i386
+Architecture: i386 amd64
 Depends: rootstrap (>= 0.3.9-1), user-mode-linux, pbuilder (= ${Source-Version})
 Description: user-mode-linux version of pbuilder
  pbuilder-uml uses a User-mode-linux system, and builds Debian packages
