@@ -4,8 +4,9 @@ pbuilder (0.165) UNRELEASED; urgency=low
   * pbuilder: Build-dep resolution cannot determine the architecture being
     built on when building under fakeroot (closes: #415546) thanks to Paul
     TBBle Hampson for the patch.
+  * pbuilder-uml: enable for amd64
 
- -- Junichi Uekawa <dancer@debian.org>  Tue, 20 Mar 2007 23:47:32 +0900
+ -- Junichi Uekawa <dancer@debian.org>  Wed, 21 Mar 2007 22:10:32 +0900
 
 pbuilder (0.164) unstable; urgency=low
 
