@@ -1,3 +1,10 @@
+2007-03-21  Junichi Uekawa  <dancer@debian.org>
+
+	* debian/rules (binary-arch): create similar for amd64.
+
+	* debian/control (Architecture): try having amd64 package for
+	pbuilder-uml
+
 2007-03-20  Junichi Uekawa  <dancer@debian.org>
 
 	* pbuilder-buildpackage: build-dep resolution cannot determine the
